@@ -1,6 +1,5 @@
 energy-skate-park.name=Energy Skate Park
-
-interview.name=Energy Skate Park Interview Options
+energy-skate-park-basics.name=Energy Skate Park Basics
 
 #Invitations
 invitaiton.arrow-keys=<html>Press the Arrow Keys<br>to apply thrust!<html>
