@@ -1,7 +1,6 @@
 project.depends.data=data
 project.depends.source=src
-project.depends.lib=phetcommon : jfreechart : jfreechart-phet: piccolo-phet : timeseries : spline
+project.depends.lib=jfreechart-phet: piccolo-phet : timeseries : spline
 
 project.flavor.energy-skate-park.mainclass= edu.colorado.phet.energyskatepark.EnergySkateParkApplication
-
-#project.flavor.interview.mainclass= edu.colorado.phet.energyskatepark.InterviewSetup
+project.flavor.energy-skate-park-basics.mainclass= edu.colorado.phet.energyskatepark.EnergySkateParkBasicsApplication
