@@ -1,3 +1,4 @@
+Started new energy-skate-park-basics flavor
 Made fields final, removed unused classes
 Reformatted and optimized imports
 # 2.08.00 (53070) Jun 12, 2011
